--- a/src/main/resources/templates/item/loginItemDetail.html
+++ b/src/main/resources/templates/item/loginItemDetail.html
@@ -158,7 +158,7 @@
 
                             <td>
                                 <a th:href="|/attach/${review.reviewId}|">
-                                    <img th:if="${review.storeFileName}" th:src="|/images/${review.storeFileName}|"
+                                    <img th:if="${review.storeFileName}" th:src = "*{review.storeFileName}"
                                          width="75" height="75"/>
                                 </a>
                             </td>
